[tool.poetry]
name = "asyncio-url-checker"
version = "0.1.0"
description = ""
authors = ["NikolayFirsov <kolekmolek95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.6"
certifi = "^2024.8.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


